# CompMathLabs

./: CubicSpline.h  ReportSpline.ipynb  output_spline.txt
Integrate/: CMakeLists.txt  Integrate.cpp  Integrate.h  IntegrateReport.ipynb  output_integrate.txt
Interpolation/: CMakeLists.txt  Interp.cpp  Interp.h  output_interp_ch_3.txt  output_interp_ch_4.txt  output_interp_ch_5.txt  output_interp_uni_3.txt  output_interp_uni_4.txt  output_interp_uni_5.txt
Interpolation/.ipynb_checkpoints/: InterpReport-checkpoint.ipynb
Spline/: CMakeLists.txt  Spline.cpp
Spline/.ipynb_checkpoints/: ReportSpline-checkpoint.ipynb
diff/: CMakeLists.txt  data_3.csv  data_4.csv  data_5.csv  diff_scheme_uc.cpp  factorial.cpp  factorial.h  gauss_method.cpp  gauss_method.h  main.cpp
diff/.ipynb_checkpoints/: report-checkpoint.ipynb
